(lang dune 2.6)
(name zelus-jax)
(version 0.1)
(maintainers "Guillaume Baudart" "Reyyan Tekin")
(authors "Guillaume Baudart" "Reyyan Tekin")
(source (github rpl-lab/zlax))

(package
 (name zelus-jax)
 (synopsis "JAX librairies for zelus")
 (description "JAX librairies for zelus")
 (depends zelus))

(generate_opam_files true)

